tempfile/derive_more/tests/compile_fail/display/shared_format_unclosed_brace.rs
#[derive(derive_more::Display)]
#[display("Stuff({)")]
enum Foo {
    A,
}

fn main() {}
